# GitHubResume

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
github_resume/: config.yml  const.py  service.py
github_resume/business/consume/: __init__.py  const.py  consume.py  response.py  utils.py
github_resume/business/parsers/: const.py  pdf.py
github_resume/templates/: template.css  template.html
