[tool.poetry]
name = "github-resume"
version = "0.1.0"
description = "A microsservice that access the GitHub API and make a resume of the data on a easy understandable format"
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nameko = "^2.14.1"
Werkzeug = "^2.2.0"
requests = "^2.28.1"
Jinja2 = "^3.1.2"
pdfkit = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
